# sequent-calculus-compiler-bench

./: .gitignore  CITATION.cff  Cargo.toml  Features.md  Makefile  README.md  a.out  fail  flake.nix  short_circuit.md
benchmarks/: Cargo.toml  check_missing.sh
benchmarks/results/: Ack.csv  Cpstak.csv  Deriv.csv  Evenodd.csv  EvenoddGoto.csv  Fib.csv  Merge.csv  MotzkinGoto.csv
benchmarks/src/cli/: benchmark.rs  config.rs  mod.rs
benchmarks/suite/Ack/: Ack.rs
benchmarks/suite/Boyer/: Boyer.rs  Boyer.sc
benchmarks/suite/Constraints/: Constraints.args
benchmarks/suite/Cryptarithm1/: Cryptarithm1.rs
benchmarks/suite/Divrec/: Divrec.sc
benchmarks/suite/EraseUnused/: EraseUnused.rs
benchmarks/suite/EvenoddGoto/: EvenoddGoto.args
benchmarks/suite/FactorialAccumulator/: FactorialAccumulator.args  FactorialAccumulator.rs  FactorialAccumulator.sc
benchmarks/suite/Fish/: Fish.sc
benchmarks/suite/Gcd/: Gcd.args  Gcd.rs
lib/: Cargo.toml
testsuite/: Cargo.toml
testsuite/fail_check/: T-001-codata-codata.sc  T-001-constructor.sc  T-001-data-codata.sc  T-001-data-data.sc  T-001-destructor.sc  T-001-fun.sc  T-004-unbound-variable.sc  T-005-unbound-covariable.sc  T-009-empty-match.sc  case-missing.sc  case_mixed.sc  cocase-additional.sc  cocase-missing.sc  type-param-clash.sc  type-param-missing-case.sc  type-param-missing-dtor.sc  type-param-twice.sc
testsuite/src/: end_to_end_tests.rs  errors.rs  fun_tests.rs  load_tests.rs  main.rs  single.rs
testsuite/success_check/: case_of.sc  goto.sc  label.sc  label_goto.sc  literal.sc  op.sc  variable.sc
(+509 files in other folders)
