[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
# Benchmark Config
basic-toml = { version = "0.1.9" }
serde = { version = "1.0.217" }
# Workspace dependencies
driver = { path = "../lang/driver" }
