[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"

autobins = false

[[test]]
name = "testsuite"
path = "src/main.rs"
harness = false

[[test]]
name = "test-single"
path = "src/single.rs"
harness = false

[dependencies]
lib = { path="../lib" }
basic-toml = { version = "0.1.9" }
serde = { version = "1.0.217" }
